--- a/SDL_version.mediawiki
+++ b/SDL_version.mediawiki
@@ -1,9 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
-|}
-
 
 = SDL_version =
 A structure that contains information about the version of SDL in use.
@@ -21,7 +17,7 @@ A structure that contains information about the version of SDL in use.
 |-
 |Uint8 
 |'''patch''' 
-|update version ^(patchlevel)^
+|update version (patchlevel)
 |}
 
 == Code Examples ==
