--- a/SDL_COMPILEDVERSION.mediawiki
+++ b/SDL_COMPILEDVERSION.mediawiki
@@ -1,39 +1,14 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_COMPILEDVERSION =
-Use this macro to ^get the current SDL version number (major.minor.patchlevel)^.
- ''-or-''
-A macro that produces the current SDL version number (major.minor.patchlevel)
-
-<<Color2(green,Is this whatever is currently in use? what was compiled against? or what the most recent available is?  It is unclear.  Does this just pull a number for each part using VERSIONNUM but then report them all together?  How is this different from SDL_VERSION?)>>
+Use this macro to get the SDL version number that you compiled against.
 
 
 == Syntax ==
 ```c++
-SDL_COMPILEDVERSION \
- SDL_VERSIONNUM(SDL_MAJOR_VERSION,
-                SDL_MINOR_VERSION,
-                SDL_PATCHLEVEL)
+SDL_COMPILEDVERSION
 ```
-
-<<Color2(green,Do you want this listed like a function (as above) or all on one line since it is not a function?)>>
-
-== Macro Parameters ==
-{|
-|'''SDL_MAJOR_VERSION'''
-|the major version number
-|-
-|'''SDL_MINOR_VERSION'''
-|the minor version number
-|-
-|'''SDL_PATCHLEVEL'''
-|the update version number (patchlevel)
-|}
-
-== Return Value ==
-<<Color2(green,Is this section empty or does it return X.Y.Z?)>>
 
 == Code Examples ==
 ```c++
