--- a/CategoryVersion.mediawiki
+++ b/CategoryVersion.mediawiki
@@ -12,13 +12,13 @@
 
 These functions are used to collect or display information about the version of SDL that is currently being used by the program or that it was compiled against.
 
-: The version number consists of three segments (X.Y.Z)
+: The version consists of three segments (X.Y.Z)
 * X = '''Major Version''', which increments with massive changes, additions, and enhancements
 * Y = '''Minor Version''', which increments with backwards-compatible changes to the major revision
 * Z = '''Patchlevel''', which increments with fixes to the minor revision<br/>
  ''Example:'' The current version is 1.3.0
 
-: The version number may also be reported as a 4-digit numeric value where the thousands place represents the major version, the hundreds place represents the minor version, and the tens and ones places represent the patchlevel (update version).  
+: The version may also be reported as a 4-digit numeric value where the thousands place represents the major version, the hundreds place represents the minor version, and the tens and ones places represent the patchlevel (update version).  
  ''Example:'' The current version is 1300
 
 == Enumerations ==
