--- a/SDL_GetNumVideoDrivers.mediawiki
+++ b/SDL_GetNumVideoDrivers.mediawiki
@@ -1,8 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_GetNumVideoDrivers =
 Use this function to get the number of video drivers compiled into SDL.
@@ -14,7 +11,7 @@ int SDL_GetNumVideoDrivers(void)
 ```
 
 == Return Value ==
-Returns an integer >=1 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns a number >= 1 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
