--- a/SDL_GetRenderDrawBlendMode.mediawiki
+++ b/SDL_GetRenderDrawBlendMode.mediawiki
@@ -1,8 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_GetRenderDrawBlendMode =
 Use this function to get the blend mode used for drawing operations.
@@ -28,7 +25,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-<span id="blendMode"></span> '''blendMode''' may be SDL_BLENDMODE_NONE or a mask of any of the other [[SDL_BlendMode]] values OR'd together: <<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
+<span id="blendMode"></span> '''blendMode''' may be SDL_BLENDMODE_NONE or a mask of any of the following [[SDL_BlendMode]] values: <<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
 :[[SDL_SetRenderDrawBlendMode]]
