--- a/SDL_GetRenderDrawBlendMode.mediawiki
+++ b/SDL_GetRenderDrawBlendMode.mediawiki
@@ -25,7 +25,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-<span id="blendMode"></span> '''blendMode''' may be SDL_BLENDMODE_NONE or a mask of any of the following [[SDL_BlendMode]] values: <<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
+<span id="blendMode"></span> '''blendMode''' may be any of the following values: <<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
 :[[SDL_SetRenderDrawBlendMode]]
