update content (w/ Sam); remove 'draft' note

--- a/SDL_GetRenderDrawColor.mediawiki
+++ b/SDL_GetRenderDrawColor.mediawiki
@@ -1,11 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_GetRenderDrawColor =
-Use this function to get the color used for drawing operations (,,Fill,, ^Rect^ and Line).
+Use this function to get the color used for drawing operations.
 
 
 == Syntax ==
@@ -32,7 +29,7 @@ int SDL_GetRenderDrawColor(Uint8* r,
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if there is no rendering context current; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -43,8 +40,6 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_RenderDrawRect]]???
-:[[SDL_RenderDrawRects]]???
 :[[SDL_SetRenderDrawColor]]
 
 ----
