--- a/SDL_GetTextureAlphaMod.mediawiki
+++ b/SDL_GetTextureAlphaMod.mediawiki
@@ -1,11 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_GetTextureAlphaMod =
-Use this function to get the additional alpha value used in render copy operations.
+Use this function to get the additional alpha value multiplied into render copy operations.
 
 
 == Syntax ==
@@ -20,11 +17,11 @@ int SDL_GetTextureAlphaMod(SDL_Texture* texture,
 |the texture to query
 |-
 |'''alpha'''
-|a pointer filled in with the source alpha value
+|a pointer filled in with the current alpha value
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if the texture is not valid; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
