--- a/SDL_SetTextureAlphaMod.mediawiki
+++ b/SDL_SetTextureAlphaMod.mediawiki
@@ -1,11 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_SetTextureAlphaMod =
-Use this function to set an additional alpha value used in render copy operations.
+Use this function to set an additional alpha value multiplied into render copy operations.
 
 
 == Syntax ==
@@ -24,7 +21,7 @@ int SDL_SetTextureAlphaMod(SDL_Texture* texture,
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if the texture is not valid or alpha modulation is not supported; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -32,10 +29,16 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+Alpha modulation is not always supported by the driver; it will return -1 if alpha modulation is unsupported.
+
+When a texture is copied, during the copy operation the source alpha value is modulated by this alpha value according to the following formula:
+ <code>srcA = srcA * alpha</code>
+
+The [[SDL_RendererInfo]] for the current renderer has a mask of supported channel modulations which will have SDL_TEXTUREMODULATE_ALPHA set if alpha modulation is supported.
 
 == Related Functions ==
 :[[SDL_GetTextureAlphaMod]]
+:[[SDL_SetTextureColorMod]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
