--- a/SDL_SetTextureColorMod.mediawiki
+++ b/SDL_SetTextureColorMod.mediawiki
@@ -1,11 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_SetTextureColorMod =
-Use this function to set an additional color value used in render copy operations.
+Use this function to set an additional color value multiplied into render copy operations.
 
 
 == Syntax ==
@@ -32,7 +29,7 @@ int SDL_SetTextureColorMod(SDL_Texture* texture,
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if the texture is not valid or color modulation is not supported; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -40,10 +37,16 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+When a texture is rendered, during the copy operation the source color value is modulated by this color value according to the following formula:
+ <code>srcC = srcC * color</code>
+
+Color modulation is not always supported by the renderer; it will return -1 if color modulation is not supported.
+
+You can call [[SDL_GetRendererInfo]]() to fill in an [[SDL_RendererInfo]] structure with the information about the current renderer.  This structure will have SDL_TEXTUREMODULATE_COLOR set in the <code>mod_modes</code> mask if color modulation is supported.
 
 == Related Functions ==
 :[[SDL_GetTextureColorMod]]
+:[[SDL_SetTextureAlphaMod]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
