--- a/SDL_GetTextureAlphaMod.mediawiki
+++ b/SDL_GetTextureAlphaMod.mediawiki
@@ -32,6 +32,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_GetTextureColorMod]]
 :[[SDL_SetTextureAlphaMod]]
 
 ----
