--- a/SDL_GetTextureBlendMode.mediawiki
+++ b/SDL_GetTextureBlendMode.mediawiki
@@ -1,8 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_GetTextureBlendMode =
 Use this function to get the blend mode used for texture copy operations.
@@ -24,7 +21,7 @@ int SDL_GetTextureBlendMode(SDL_Texture* texture,
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if the texture is not valid; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
