--- a/SDL_GetVideoDriver.mediawiki
+++ b/SDL_GetVideoDriver.mediawiki
@@ -1,8 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_GetVideoDriver =
 Use this function to get the name of a built in video driver.
@@ -20,7 +17,7 @@ const char* SDL_GetVideoDriver(int index)
 |}
 
 == Return Value ==
-The name of the video driver with the called '''index'''. 
+Returns the name of the video driver with the given '''index'''. 
 
 == Code Examples ==
 ```c++
