--- a/SDL_SetWindowDisplayMode.mediawiki
+++ b/SDL_SetWindowDisplayMode.mediawiki
@@ -1,11 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_SetWindowDisplayMode =
-Use this function to set the display mode used when a fullscreen window is visible on the currently selected display. __By default the window's dimensions and the desktop format and refresh rate are used.__
+Use this function to set the display mode to use when a window is visible at fullscreen.
 
 
 == Syntax ==
@@ -17,7 +14,7 @@ int SDL_SetWindowDisplayMode(SDL_Window*            window,
 == Function Parameters ==
 {|
 |'''window'''
-|the type used to identify the window
+|the window to set
 |-
 |'''mode'''
 |a pointer to the [[SDL_DisplayMode]] to use, or NULL for the default mode
@@ -32,8 +29,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here'' 
-__should the underlined description above be here instead?__
+By default the window's dimensions and the desktop format and refresh rate are used.
 
 == Related Functions ==
 :[[SDL_GetWindowDisplayMode]]
