--- a/SDL_SetWindowDisplayMode.mediawiki
+++ b/SDL_SetWindowDisplayMode.mediawiki
@@ -14,14 +14,14 @@ int SDL_SetWindowDisplayMode(SDL_Window*            window,
 == Function Parameters ==
 {|
 |'''window'''
-|the window to set
+|the window to affect
 |-
 |'''mode'''
-|a pointer to the [[SDL_DisplayMode]] to use, or NULL for the default mode
+|a pointer to the [[SDL_DisplayMode]] to use, or NULL to use the window's dimensions and the desktop's format and refresh rate
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if setting the display mode failed; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -29,7 +29,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-By default the window's dimensions and the desktop format and refresh rate are used.
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_GetWindowDisplayMode]]
