--- a/SDL_GetWindowPosition.mediawiki
+++ b/SDL_GetWindowPosition.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_GetWindowPosition =
 Use this function to get the position of the window.
@@ -16,13 +15,13 @@ void SDL_GetWindowPosition(SDL_Window* window,
 == Function Parameters ==
 {|
 |'''window'''
-|the type used to identify the window
+|the window to query
 |-
 |'''x'''
-|a pointer to the x coordinate of the window
+|a pointer filled in with the x coordinate of the window
 |-
 |'''y'''
-|a pointer to the y coordinate of the window
+|a pointer filled in with the y coordinate of the window
 |}
 
 == Code Examples ==
