--- a/SDL_GetWindowSize.mediawiki
+++ b/SDL_GetWindowSize.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_GetWindowSize =
 Use this function to get the size of the window's client area.
@@ -16,13 +15,13 @@ void SDL_GetWindowSize(SDL_Window* window,
 == Function Parameters ==
 {|
 |'''window'''
-|the type used to identify the window
+|the window to query
 |-
 |'''w'''
-|the width of the window
+|a pointer filled in with the width of the window
 |-
 |'''h'''
-|the height of the window
+|a pointer filled in with the height of the window
 |}
 
 == Code Examples ==
