--- a/SDL_GetWindowTitle.mediawiki
+++ b/SDL_GetWindowTitle.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_GetWindowTitle =
 Use this function to get the title of the window, in UTF-8 format.
@@ -14,11 +13,11 @@ const char* SDL_GetWindowTitle(SDL_Window* window)
 == Function Parameters ==
 {|
 |'''window'''
-|the window to be queried
+|the window to query
 |}
 
 == Return Value ==
-The title of the window in UTF-8 format.  ^What happens if it can't get the title or there is no title?^
+The title of the window in UTF-8 format or "" if there is no title.
 
 == Code Examples ==
 ```c++
