update content (w/ Sam); remove 'draft' note

--- a/SDL_GL_LoadLibrary.mediawiki
+++ b/SDL_GL_LoadLibrary.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_GL_LoadLibrary =
 Use this function to dynamically load an OpenGL library.
@@ -18,7 +17,7 @@ int SDL_GL_LoadLibrary(const char* path)
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if the library couldn't be loaded; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
