--- a/SDL_GL_SetAttribute.mediawiki
+++ b/SDL_GL_SetAttribute.mediawiki
@@ -1,8 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_GL_SetAttribute =
 Use this function to set an OpenGL window attribute before window creation.
@@ -17,14 +14,14 @@ int SDL_GL_SetAttribute(SDL_GLattr attr,
 == Function Parameters ==
 {|
 |'''attr'''
-|the [[SDL_GLattr]] to be set
+|the [[SDL_GLattr]] to be set; see [[#Remarks|Remarks]] for details
 |-
 |'''value'''
 |the desired value for the attribute
 |}
 
 == Return Value ==
-Returns 0 on success or ,,a negative error code,, ^* -1 *^ on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 *<br/>
@@ -50,6 +47,9 @@ if ( (screen=SDL_SetVideoMode( 640, 480, 16, SDL_OPENGL )) == NULL ) {
 Note: The SDL_DOUBLEBUF flag is not required to enable double buffering when setting an OpenGL video mode. Double buffering is enabled or disabled using the SDL_GL_DOUBLEBUFFER attribute. <br/>*
 
 <<Color2(green,Should SDL_GL_DOUBLEBUFFER be hyperlinked to SDL_GLattr like [[SDL_GLattr|SDL_GL_DOUBLEBUFFER]]?  It could also go to an anchor at that value specifically instead of just to the page.  Is there a link for SDL_DOUBLEBUF?  Does it still exist?)>>
+
+'''attr''' can be one of these values:
+<<Include(SDL_GLattr, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
 :[[SDL_GL_GetAttribute]]
