--- a/SDL_GL_SetAttribute.mediawiki
+++ b/SDL_GL_SetAttribute.mediawiki
@@ -1,5 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+'''DRAFT'''
 
 = SDL_GL_SetAttribute =
 Use this function to set an OpenGL window attribute before window creation.
@@ -14,7 +15,7 @@ int SDL_GL_SetAttribute(SDL_GLattr attr,
 == Function Parameters ==
 {|
 |'''attr'''
-|the [[SDL_GLattr]] to be set; see [[#Remarks|Remarks]] for details
+|the [[SDL_GLattr]] to set; see [[#Remarks|Remarks]] for details
 |-
 |'''value'''
 |the desired value for the attribute
@@ -42,11 +43,7 @@ if ( (screen=SDL_SetVideoMode( 640, 480, 16, SDL_OPENGL )) == NULL ) {
 <<Color2(green,Seems like the SDL_SetVideoMode part of the example needs to be updated?)>>
 
 == Remarks ==
-*<br/>This function sets the OpenGL attribute '''attr''' to '''value'''. The requested attributes will take effect after ,,a call to SDL_SetVideoMode,, ^initializing the video driver^. You should use [[SDL_GL_GetAttribute]]() to check the values after ,,a call to SDL_SetVideoMode,, ^initializing the video driver^, since the values obtained can differ from the requested ones.
-
-Note: The SDL_DOUBLEBUF flag is not required to enable double buffering when setting an OpenGL video mode. Double buffering is enabled or disabled using the SDL_GL_DOUBLEBUFFER attribute. <br/>*
-
-<<Color2(green,Should SDL_GL_DOUBLEBUFFER be hyperlinked to SDL_GLattr like [[SDL_GLattr|SDL_GL_DOUBLEBUFFER]]?  It could also go to an anchor at that value specifically instead of just to the page.  Is there a link for SDL_DOUBLEBUF?  Does it still exist?)>>
+*<br/>This function sets the OpenGL attribute '''attr''' to '''value'''. The requested attributes will take effect after creating an OpenGL context. You should use [[SDL_GL_GetAttribute]]() to check the values after creating the context, since the values obtained can differ from the requested ones.
 
 '''attr''' can be one of these values:
 <<Include(SDL_GLattr, , , from="== Values ==", to="== Code Examples ==")>>
