--- a/SDL_GL_SwapWindow.mediawiki
+++ b/SDL_GL_SwapWindow.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GL_SwapWindow =
-Use this function to update the display with OpenGL rendering for double-buffered OpenGL contexts.
+Use this function to update the window with OpenGL rendering.
 
 
 == Syntax ==
@@ -22,7 +22,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+This is used with double-buffered OpenGL contexts, which are the default.
 
 == Related Functions ==
 
