--- a/SDL_RenderDrawLine.mediawiki
+++ b/SDL_RenderDrawLine.mediawiki
@@ -1,8 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_RenderDrawLine =
 Use this function to draw a line on the current rendering target.
@@ -32,7 +29,7 @@ int SDL_RenderDrawLine(int x1,
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if there is no rendering context current; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -40,14 +37,14 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+[[SDL_RenderDrawLine]]() draws the line to include both end points.  If you want to draw multiple, connecting lines use [[SDL_RenderDrawLines]]() instead.
 
 == Related Functions ==
-:[[SDL_RenderDrawLines]]???
-:[[SDL_RenderDrawPoint]]???
-:[[SDL_RenderDrawPoints]]???
-:[[SDL_RenderDrawRect]]???
-:[[SDL_RenderDrawRects]]???
+:[[SDL_RenderDrawLines]]
+:[[SDL_RenderDrawPoint]]
+:[[SDL_RenderDrawPoints]]
+:[[SDL_RenderDrawRect]]
+:[[SDL_RenderDrawRects]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
