--- a/SDL_RenderDrawRects.mediawiki
+++ b/SDL_RenderDrawRects.mediawiki
@@ -1,32 +1,27 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT
-|}
 
 = SDL_RenderDrawRects =
-Use this function to draw some number of rectangles in the current rendering target with the drawing color.
+Use this function to draw some number of rectangles in the current rendering target.
 
 
 == Syntax ==
 ```c++
-int SDL_RenderDrawRects(const SDL_Rect** rect,
+int SDL_RenderDrawRects(const SDL_Rect** rects,
                         int              count)
 ```
 
 == Function Parameters ==
-*(typo in header \param rects, rect in syntax)*
-
 {|
 |'''rects'''
-|a pointer to an array of destination rectangles
+|a pointer to an array of destination rectangles of type [[SDL_Rect]]
 |-
 |'''count'''
 |the number of rectangles
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if there is no rendering context current; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -37,13 +32,13 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_GetRenderDrawColor]]???
-:[[SDL_RenderDrawLine]]???
-:[[SDL_RenderDrawLines]]???
-:[[SDL_RenderDrawPoint]]???
-:[[SDL_RenderDrawPoints]]???
-:[[SDL_RenderDrawRect]]???
-:[[SDL_SetRenderDrawColor]]???
+:[[SDL_RenderDrawLine]]
+:[[SDL_RenderDrawLines]]
+:[[SDL_RenderDrawPoint]]
+:[[SDL_RenderDrawPoints]]
+:[[SDL_RenderDrawRect]]
+:[[SDL_SetRenderDrawBlendMode]]
+:[[SDL_SetRenderDrawColor]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
